Incorporated PR feedback
